Update RandomChunkPlugin.java